--- a/journals/2023_03_28.md
+++ b/journals/2023_03_28.md
@@ -1,6 +1,7 @@
 - Installé Logseq
 - Xubuntu sur virtualbox
 - Vagrant installé sur VM
-- Installé eet activé openssh-server
--
+- ![image.png](../assets/image_1680019158583_0.png){:height 400, :width 622}
+- Installé et activé openssh-server
+- ![image.png](../assets/image_1680019118448_0.png)
 -
