--- a/journals/2023_03_30.md
+++ b/journals/2023_03_30.md
@@ -1,20 +1,41 @@
 - # Presentation monitoring
-- ![cykl-devops-cycle.png](../assets/cykl-devops-cycle_1680176698016_0.png)
+- ![cykl-devops-cycle.png](../assets/cykl-devops-cycle_1680176955760_0.png)
 -
-- ## Grafana tutorial
-	-
-- https://grafana.com/tutorials/grafana-fundamentals/
+- But: Comprendre ce qui se passe dans l'application
 - Prometheus-Grafana stack
+- ![architecture.png](../assets/architecture_1680178871124_0.png)
+	-
+	-
+- ## Grafana tutorial
+	- Outil de dashboard, visuels
+	- https://grafana.com/tutorials/grafana-fundamentals/
+	- Métriques: nb de connections actives, temps de réponses,...
+	-
+	-
 - monitoring de requetes sur localhost:8081
 - ![image.png](../assets/image_1680168090472_0.png)
 -
 - ![image.png](../assets/image_1680163088943_0.png)
-- definir métriques
 - alerting automatique
 - ![image.png](../assets/image_1680166606587_0.png)
 - ![image.png](../assets/image_1680166633304_0.png){:height 351, :width 623}
 - ## Prometheus
+- Tutorial: https://prometheus.io/docs/prometheus/latest/getting_started/
+- Développé chez Soundcloud
+- Largement en GO
+- Outil de monitoring et d'alerte
+- Collection de métriques numériques sous forme de séries temporelles (time series)
+- PromQL
+- modèle pull via HTTP
 - ![image.png](../assets/image_1680168439171_0.png)
+- ## Plus
+- Designed for reliability
+- Collection de données multidimensionnelles
+- ## Moins
+- 100% fiable mais pas 100% précis, pas assez pour facturation
+-
+-
+-
 -
 -
 -
