Monitoring sur une application laravel

--- a/journals/2023_03_30.md
+++ b/journals/2023_03_30.md
@@ -33,9 +33,32 @@
 - Collection de données multidimensionnelles
 - ## Moins
 - 100% fiable mais pas 100% précis, pas assez pour facturation
+- ## Prometheus Exporter
+- ### Exportation de metrics d'une application
+- Personnalisation des metrics de l'application
 -
+- Lien vers documentation:
+- https://grafana.com/oss/prometheus/exporters/
+- https://prometheus.io/docs/instrumenting/exporters/
 -
+- Tuto :
+- https://acloudguru.com/hands-on-labs/collecting-application-metrics-with-prometheus
 -
+- ## Exemple réalisé sur application Laravel
+- Resources uilisées:
+- https://grafana.com/grafana/dashboards/11034-laravel-horizon/
+- https://github.com/lkaemmerling/laravel-horizon-prometheus-exporter
 -
+- Configuration de l'application:
+	- - composer require lkaemmerling/laravel-horizon-prometheus-exporter
+- Configuration de prometheus:
+	- - vi /opt/homebrew/etc/prometheus.yml
+- ![Capture d’écran 2023-03-30 à 14.47.20.png](../assets/Capture_d’écran_2023-03-30_à_14.47.20_1680181305167_0.png)
 -
+- #### Résultat
+- http://localhost:8000/metrics :
+- ![Capture d’écran 2023-03-30 à 14.45.37.png](../assets/Capture_d’écran_2023-03-30_à_14.45.37_1680181393299_0.png)
+-
+- Grafana:
+- ![Capture d’écran 2023-03-30 à 14.45.11.png](../assets/Capture_d’écran_2023-03-30_à_14.45.11_1680181482544_0.png)
 -
