final avec notes

--- a/journals/2023_03_30.md
+++ b/journals/2023_03_30.md
@@ -1,3 +1,5 @@
+-
+-
 - # Presentation monitoring
 - ![cykl-devops-cycle.png](../assets/cykl-devops-cycle_1680176955760_0.png)
 -
@@ -53,7 +55,9 @@
 	- - composer require lkaemmerling/laravel-horizon-prometheus-exporter
 - Configuration de prometheus:
 	- - vi /opt/homebrew/etc/prometheus.yml
-- ![Capture d’écran 2023-03-30 à 14.47.20.png](../assets/Capture_d’écran_2023-03-30_à_14.47.20_1680181305167_0.png)
+- ![Capture d’écran 2023-03-30 à 14.47.20.png](../assets/Capture_d’écran_2023-03-30_à_14.47.20_1680181305167_0.png){:height 32, :width 348}
+-
+-
 -
 - #### Résultat
 - http://localhost:8000/metrics :
@@ -61,4 +65,25 @@
 -
 - Grafana:
 - ![Capture d’écran 2023-03-30 à 14.45.11.png](../assets/Capture_d’écran_2023-03-30_à_14.45.11_1680181482544_0.png)
+-
+- ## Classement
+- Gr1>Gr3>**Gr4**>Gr5>Gr6>Gr2
+- Gr1 CI/CD:
+	- Discours:17
+	- Travail: 17
+- Gr2 Docker&Wamp
+	- Discours: 14
+	- Travail: 14
+- Gr3 Jira & Docker
+	- Discours: 15
+	- Travail: 16
+- **Gr4** Docker
+	- Discours:  14
+	- Travail: 15
+- Gr5 Monitoring
+	- Discours: 16
+	- Travail:14
+- Gr6 Unit Tests
+	- Discours: 14
+	- Travail: 15
 -
